[package]
name = "ruuvitag-upload"
version = "0.1.0"
authors = ["Oskari Timperi <oskari.timperi@iki.fi>"]
edition = "2018"

[dependencies]
rumble = { git = "https://github.com/lautis/rumble", tag = "v0.3.0.ruuvitag-listener.1" }
ruuvi-sensor-protocol = "0.2"
docopt = "1.0.2"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
reqwest = "0.9.14"

[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
