[package]
name = "ruuvitag-upload"
version = "0.3.0"
authors = ["Oskari Timperi <oskari.timperi@iki.fi>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A tool for collecting a set of ruuvitag sensor measurements and uploading them for further processing."
readme = "README.md"
homepage = "https://github.com/oswjk/ruuvitag-upload"
repository = "https://github.com/oswjk/ruuvitag-upload"
keywords = ["command", "ruuvi", "ruuvitag"]
categories = ["command-line-utilities"]

[dependencies]
rumble = "0.3"
ruuvi-sensor-protocol = "0.2"
docopt = "1.0.2"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
reqwest = "0.9.14"
directories = "1.0"

[dev-dependencies]
assert_fs = "0.11"

[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
